<resources>
    <string name="app_name">AndroidChess</string>
    <string name="SinglePlayerString">1 Jogador</string>
    <string name="MultiPlayerString">2 Jogadores</string>
    <string name="OnlineString">2 Jogadores (LAN)</string>
    <string name="loadOrNewMessage">Carregar jogo existente ou criar novo jogo?</string>
    <string name="loadButton">Escolher Existente</string>
    <string name="newButton">Novo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="historico">Histórico</string>
    <string name="placeholder">placeholder</string>
    <string name="blank_space">" "</string>

    <!-- strings para descrição das jogadas -->
    <string name="versus">vs.</string>
    <string name="bishop">Bispo</string>
    <string name="king">Rei</string>
    <string name="knight">Cavalo</string>
    <string name="pawn">Peão</string>
    <string name="queen">Rainha</string>
    <string name="rook">Torre</string>
    <string name="black">preto</string>
    <string name="white">branco</string>
    <string name="piece_attack">atacou</string>
    <string name="moved_from">moveu-se de</string>
    <string name="moved_to">para</string>
    <string name="game_mode_changed">Modo de jogo mudou para</string>
    <string name="game_start">Início de jogo</string>
    <string name="game_end">Fim de jogo -  Vencedor:</string>

    <string name="takePictureText">Tirar Foto</string>
    <string name="resetPictureText">Tirar Nova Foto</string>
    <string name="registerPlayerNext">Seguinte</string>
    <string name="registerPlayerNameText">Nome:</string>
    <string name="player">Jogador</string>
    <string name="loadMenuIcon">Carregar Perfil</string>
    <string name="errorOpeningCamera">Erro a abrir a câmara!</string>
    <string name="cancelProfileLoad">Cancelar</string>
    <string name="queen_char">\u265B</string>
    <string name="king_char">\u265A</string>
    <string name="creditos">Créditos</string>
    <string name="resign">Desistir</string>
    <string name="playerEnter">Novo Jogador</string>
    <string name="newPlayerString">Novo Jogador</string>
    <string name="amov">Arquiteturas Móveis</string>
    <string name="andre_pereira">André Pereira, 21230559</string>
    <string name="lidia_fonseca">Lídia Fonseca, 21250370</string>
    <string name="docente">Docente: Álvaro Santos</string>
    <string name="trabalho_realizado_por">Trabalho realizado por:</string>
    <string name="white_victory">Vitória do lado branco!</string>
    <string name="black_victory">Vitória do lado preto!</string>
    <string name="knightSymbol">\u265E</string>
    <string name="queenSymbol">\u265B</string>
    <string name="bishopSymbol">\u265D</string>
    <string name="rookSymbol">\u265C</string>
    <string name="promoteDialogText">Promover o peão para que peça ?</string>
</resources>
