<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.amov.lidia.andre.androidchess.CustomActivities.CreditsActivity"
    android:orientation="vertical"
    android:background="#56636c">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="30sp"
        android:padding="15dp"
        android:textColor="#ffffff"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_isec"
        android:padding="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amov"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingBottom="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/docente"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:padding="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trabalho_realizado_por"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingBottom="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/andre_pereira"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingBottom="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lidia_fonseca"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingBottom="15dp"/>

</LinearLayout>
