<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.amov.lidia.andre.androidchess.CustomActivities.RegisterPlayer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/playerId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/player"
            android:textSize="20sp" />
    </LinearLayout>

    <SurfaceView
        android:id="@+id/pictureArea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="18">

    </SurfaceView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/takePictureButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="cameraButtonClicked"
            android:text="@string/takePictureText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="2"
        android:padding="0dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:gravity="center"
            android:text="@string/registerPlayerNameText"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/nameBox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="45" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:onClick="acceptPlayerClick"
            android:text="@string/registerPlayerNext" />

    </LinearLayout>
</LinearLayout>
